refactor: encapsulate direct repository query calls into repository methods